<resources>
    <string name="app_name">ClicksAndroidTask</string>
    <string name="source_name">Source name</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="news_image">News_Image</string>
    <string name="news_time">news_time</string>
    <string name="upload">upload</string>
    <string name="no_internet_connection">لايوجد اتصال بالإنترنت</string>
    <string name="dismiss">إغلاق</string>

</resources>